--- a/index.html
+++ b/index.html
@@ -2004,8 +2004,8 @@
 
                     <ul class="contact__content grid">
                         <li class="contact__address">Telephone: <span class="contact__information">999 - 888 - 777</span></li>
-                        <li class="contact__address">Email:  <span class="contact__information">delivery@email.com</span></li>
-                        <li class="contact__address">Location: <span class="contact__information">Lima - Peru</span></li>
+                        <li class="contact__address">Email:  <span class="contact__information">delivery@gmail.com</span></li>
+                        <li class="contact__address">Location: <span class="contact__information">Bhubaneswar, Odisha - India</span></li>
                     </ul>
 
                     <div class="contact__content">
@@ -2058,7 +2058,7 @@
                 </div>
             </div>
 
-            <p class="footer__copy">&#169; Bedimcode. All right reserved</p>
+            <p class="footer__copy">&#169; AnkitSaha@iiitbbsr. All right reserved</p>
         </footer>
 
         <!--=============== SCROLL UP ===============-->
